salvia_macro/tests/query_ui/fail/arg_duplicate_binding.rs
#![allow(unused_imports)]

use salvia::{query, QueryContext};

#[query]
async fn f(_i: i32, _i: u64, _cx: &QueryContext) {}

fn main() {}
